--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,6 @@
 
   <title>Full Test</title>
 
-  <link rel="stylesheet" href="/app.css">
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -17,7 +16,7 @@
 
 <body>
   <div id="app"></div>
-  <script src="/app.min.js"></script>
+  <script src="/app.bundle.js"></script>
 	
 </body>
 </html>
