--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
 
   <title>Full Test</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
