--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-  <title>Full Test</title>
+  <title>BarSVP</title>
 
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <!--[if lt IE 9]>
